// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generates a class-based \`.gjs\` component 1`] = `
"import Component from '@glimmer/component';

export default class Foo extends Component {
  <template>{{yield}}</template>
}
"
`;

exports[`generates a class-based \`.gts\` component 1`] = `
"import Component from '@glimmer/component';

export interface FooSignature {
  Args: {};
  Blocks: {
    default: [];
  };
  Element: null;
}

export default class Foo extends Component<FooSignature> {
  <template>
    {{yield}}
  </template>
}
"
`;

exports[`generates a named export > --classBased --typescript 1`] = `
"import Component from '@glimmer/component';

export interface FooSignature {
  Args: {};
  Blocks: {
    default: [];
  };
  Element: null;
}

export class Foo extends Component<FooSignature> {
  <template>
    {{yield}}
  </template>
}
"
`;

exports[`generates a named export > --classBased 1`] = `
"import Component from '@glimmer/component';

export class Foo extends Component {
  <template>{{yield}}</template>
}
"
`;

exports[`generates a named export > --typescript 1`] = `
"import type { TOC } from '@ember/component/template-only';

export interface FooSignature {
  Args: {};
  Blocks: {
    default: [];
  };
  Element: null;
}

export const Foo: TOC<FooSignature> = <template>{{yield}}</template>;
"
`;

exports[`generates a nested colocated template-only \`.gjs\` component 1`] = `
"<template>{{yield}}</template>
"
`;

exports[`generates a nested template-only \`.gjs\` component 1`] = `
"<template>{{yield}}</template>
"
`;

exports[`generates a template-only \`.gjs\` component 1`] = `
"<template>{{yield}}</template>
"
`;

exports[`generates a template-only \`.gjs\` component at a custom path 1`] = `
"<template>{{yield}}</template>
"
`;

exports[`generates a template-only \`.gts\` component 1`] = `
"import type { TOC } from '@ember/component/template-only';

export interface FooSignature {
  Args: {};
  Blocks: {
    default: [];
  };
  Element: null;
}

const Foo: TOC<FooSignature> = <template>{{yield}}</template>;

export default Foo;
"
`;

exports[`generates a template-only \`.gts\` component at a custom path 1`] = `
"import type { TOC } from '@ember/component/template-only';

export interface FooSignature {
  Args: {};
  Blocks: {
    default: [];
  };
  Element: null;
}

const Foo: TOC<FooSignature> = <template>{{yield}}</template>;

export default Foo;
"
`;
